# skill-link-manager

./: .gitignore  CODEBUDDY.md  README.md  Skill-Link-Manager.md  generate-icon.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: glossary.md
docs/adrs/: 0001-skill-categorization.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: known_agents.json  lib.rs  main.rs
src/components/: CategoryManager.tsx  CheckboxIcon.tsx  ConfirmDialog.tsx  Modal.tsx  Onboarding.tsx  PathInput.tsx  SettingsPage.tsx  SkillCard.tsx  SkillDetail.tsx  ThemeToggle.tsx  ToolDirDetail.tsx  Tooltip.tsx
src/hooks/: useAutoName.ts
src/i18n/: I18nContext.tsx  translations.ts
src/utils/: path.ts
